--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -45,13 +45,18 @@
     <Compile Include="CurrencyCodes.cs" />
     <Compile Include="GlobalID.cs" />
     <Compile Include="InvoiceDescriptor.cs" />
+    <Compile Include="InvoiceDescriptorWriter.cs" />
     <Compile Include="InvoiceType.cs" />
     <Compile Include="PaymentTerms.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceCharge.cs" />
+    <Compile Include="SubjectCode.cs" />
     <Compile Include="Tax.cs" />
+    <Compile Include="TaxCategoryCode.cs" />
     <Compile Include="TaxRegistration.cs" />
+    <Compile Include="TaxRegistrationSchemeID.cs" />
+    <Compile Include="TaxType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
