initial implementation of loading

--- a/ZUGFeRD-Test/ZUGFeRD-Test.csproj
+++ b/ZUGFeRD-Test/ZUGFeRD-Test.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Assert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
