--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuantityCodes.cs" />
     <Compile Include="ServiceCharge.cs" />
-    <Compile Include="SubjectCode.cs" />
+    <Compile Include="SubjectCodes.cs" />
     <Compile Include="Tax.cs" />
     <Compile Include="TaxCategoryCodes.cs" />
     <Compile Include="TaxRegistration.cs" />
@@ -62,6 +62,7 @@
     <Compile Include="TaxTypes.cs" />
     <Compile Include="TradeAllowanceCharge.cs" />
     <Compile Include="TradeLineItem.cs" />
+    <Compile Include="UnsupportedException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
