--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Buyer.cs" />
     <Compile Include="Charge.cs" />
     <Compile Include="Contact.cs" />
+    <Compile Include="CountryCodes.cs" />
     <Compile Include="CurrencyCodes.cs" />
     <Compile Include="GlobalID.cs" />
     <Compile Include="InvoiceDescriptor.cs" />
