--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankAccount.cs" />
     <Compile Include="Buyer.cs" />
     <Compile Include="Charge.cs" />
     <Compile Include="Contact.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="InvoiceDescriptorReader.cs" />
     <Compile Include="InvoiceDescriptorWriter.cs" />
     <Compile Include="InvoiceType.cs" />
+    <Compile Include="PaymentMeans.cs" />
     <Compile Include="PaymentTerms.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
