fixes to stream handling

--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CountryCodes.cs" />
     <Compile Include="CurrencyCodes.cs" />
     <Compile Include="GlobalID.cs" />
+    <Compile Include="IllegalStreamException.cs" />
     <Compile Include="InvoiceDescriptor.cs" />
     <Compile Include="InvoiceDescriptorReader.cs" />
     <Compile Include="InvoiceDescriptorWriter.cs" />
