--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccount.cs" />
+    <Compile Include="DeliveryNoteReferencedDocument.cs" />
     <Compile Include="Party.cs" />
     <Compile Include="Charge.cs" />
     <Compile Include="Contact.cs" />
