Breaking change: * added associated document * fixes for correctly parsing sample file (COMFORT_Rabatte)

--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalReferencedDocument.cs" />
+    <Compile Include="AssociatedDocument.cs" />
     <Compile Include="BankAccount.cs" />
     <Compile Include="BaseReferencedDocument.cs" />
     <Compile Include="BuyerOrderReferencedDocument.cs" />
