added proper support for associated documents and includednotes on item level. updated to version 2.4.0

--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ContractReferencedDocument.cs" />
     <Compile Include="DeliveryNoteReferencedDocument.cs" />
     <Compile Include="InvoiceValidator.cs" />
+    <Compile Include="Note.cs" />
     <Compile Include="Party.cs" />
     <Compile Include="Charge.cs" />
     <Compile Include="Contact.cs" />
