--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,103 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B9550547-0A5C-445D-88C7-DD481881E62F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>s2industries.ZUGFeRD</RootNamespace>
-    <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>2.7.0</Version>
+    <Authors>Stephan Stapel</Authors>
+    <Company>s2 industries</Company>
+    <Description>The ZUGFeRD library allows to create XML files as required by German electronic invoice initiative ZUGFeRD.</Description>
+    <PackageLicenseUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/blob/master/LICENSE.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
+    <PackageTags>zugferd xml</PackageTags>
+    <Copyright>Stephan Stapel, s2 industries, 2018</Copyright>
+    <AssemblyVersion>2.7.0.0</AssemblyVersion>
+    <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
+    <FileVersion>2.7.0.0</FileVersion>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AdditionalReferencedDocument.cs" />
-    <Compile Include="AssociatedDocument.cs" />
-    <Compile Include="BankAccount.cs" />
-    <Compile Include="BaseReferencedDocument.cs" />
-    <Compile Include="BuyerOrderReferencedDocument.cs" />
-    <Compile Include="ContentCodes.cs" />
-    <Compile Include="ContractReferencedDocument.cs" />
-    <Compile Include="DeliveryNoteReferencedDocument.cs" />
-    <Compile Include="InvoiceValidator.cs" />
-    <Compile Include="Note.cs" />
-    <Compile Include="Party.cs" />
-    <Compile Include="Charge.cs" />
-    <Compile Include="Contact.cs" />
-    <Compile Include="CountryCodes.cs" />
-    <Compile Include="CurrencyCodes.cs" />
-    <Compile Include="GlobalID.cs" />
-    <Compile Include="IllegalStreamException.cs" />
-    <Compile Include="InvoiceDescriptor.cs" />
-    <Compile Include="InvoiceDescriptorReader.cs" />
-    <Compile Include="InvoiceDescriptorWriter.cs" />
-    <Compile Include="InvoiceType.cs" />
-    <Compile Include="PaymentMeans.cs" />
-    <Compile Include="PaymentMeansTypeCodes.cs" />
-    <Compile Include="PaymentTerms.cs" />
-    <Compile Include="Profile.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuantityCodes.cs" />
-    <Compile Include="ReferenceTypeCodes.cs" />
-    <Compile Include="ServiceCharge.cs" />
-    <Compile Include="SubjectCodes.cs" />
-    <Compile Include="Tax.cs" />
-    <Compile Include="TaxCategoryCodes.cs" />
-    <Compile Include="TaxRegistration.cs" />
-    <Compile Include="TaxRegistrationSchemeID.cs" />
-    <Compile Include="TaxTypes.cs" />
-    <Compile Include="TradeAllowanceCharge.cs" />
-    <Compile Include="TradeLineItem.cs" />
-    <Compile Include="UnsupportedException.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ZUGFeRD.snk" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
