--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore ZUGFeRD-csharp/ZUGFeRD/ZUGFeRD.csproj
     - name: Build
       run: dotnet build ZUGFeRD-csharp/ZUGFeRD/ZUGFeRD.csproj --configuration Release --no-restore
