--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461;net480</TargetFrameworks>
-    <Version>6.1.0</Version>
+    <Version>6.2.0</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X are initiatives from German (respectively European) government to foster electronic invoices.
@@ -19,27 +19,18 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2021</Copyright>
-    <AssemblyVersion>6.1.0.0</AssemblyVersion>
+    <AssemblyVersion>6.2.0.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
-    <FileVersion>6.1.0.0</FileVersion>
+    <FileVersion>6.2.0.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>All versions of ZUGFeRD:
-    Added documentation
-
-ZUGFeRD 2.0:
-    Addition of product characteristics on item level
-    Addition of billing specified period on item level
-
-ZUGFeRD 2.1/ XREchnung:
-    Addition of product characteristics on item level
-    Addition of billing specified period on item level
-    Bugfix for decimals of GrossPriceProductTradePrice
-    XRechnung fix for AppliedTradeAllowanceCharge (#152 )
-    RoundingAmount extended to XRechnung (#153)</PackageReleaseNotes>
+    <PackageReleaseNotes>Standard quantity code for comment lines (#158)
+Bugfix for order date information in AddTradeLineItem() (#160)
+Better support for kilometer quantity code, is used differently with different versions of ZUGFeRD and XRechnung (#161)
+</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>ZUGFeRD-csharp</PackageId>
   </PropertyGroup>
