--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
-    <Version>14.0.0</Version>
+    <Version>14.1.0</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
@@ -22,15 +22,16 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2023</Copyright>
-    <AssemblyVersion>14.0.0</AssemblyVersion>
+    <AssemblyVersion>14.1.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
-    <FileVersion>14.0.0</FileVersion>
+    <FileVersion>14.1.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>14.0.0: Lots of changes, for breaking changes see https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/14.0.0
+    <PackageReleaseNotes>14.1.0: Correct reading of test indicator, allow to work with both qdt and udt data types. Full overview: https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/14.1.0
+14.0.0: Lots of changes, for breaking changes see https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/14.0.0
 13.0.0: Breaking changes on item level, various fixes
 12.8.0: Added more targets
 12.7.0: Support for EReporting, bugfixes
