Sample invoice renderer

--- a/ZUGFeRDRenderer/ZUGFeRDRenderer.csproj
+++ b/ZUGFeRDRenderer/ZUGFeRDRenderer.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="test.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="test.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="RazorEngine.NetCore" Version="3.1.0" />
   </ItemGroup>
 
