--- a/ZUGFeRD.Excel/ZUGFeRD.Excel.csproj
+++ b/ZUGFeRD.Excel/ZUGFeRD.Excel.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>s2industries.ZUGFeRD.Excel</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EPPlus" Version="4.5.3.2" />
+    <PackageReference Include="EPPlus" Version="7.5.0" />
   </ItemGroup>
 
   <ItemGroup>
