--- a/ZUGFeRD.Render/ZUGFeRD.Render.csproj
+++ b/ZUGFeRD.Render/ZUGFeRD.Render.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>s2industries.ZUGFeRD.Render</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
