--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,11 +18,11 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies test
-      run: dotnet restore ZUGFeRD-Test/ZUGFeRD-Test.csproj
+      run: dotnet restore ZUGFeRD.Test/ZUGFeRD.Test.csproj
     - name: Build test
-      run: dotnet build ZUGFeRD-Test/ZUGFeRD-Test.csproj --no-restore        
+      run: dotnet build ZUGFeRD.Test/ZUGFeRD.Test.csproj --no-restore        
     - name: Actual test
-      run: dotnet test ZUGFeRD-Test/ZUGFeRD-Test.csproj --no-build --verbosity normal        
+      run: dotnet test ZUGFeRD.Test/ZUGFeRD.Test.csproj --no-build --verbosity normal        
     - name: Restore library dependencies 
       run: dotnet restore ZUGFeRD/ZUGFeRD.csproj
     - name: Build library
