--- a/ZUGFeRD.PDF.Test/ZUGFeRD.PDF.Test.csproj
+++ b/ZUGFeRD.PDF.Test/ZUGFeRD.PDF.Test.csproj
@@ -5,6 +5,7 @@
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>s2industries.ZUGFeRD.PDF.Test</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
