--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
-    <Version>15.0.0</Version>
+    <Version>16.0.0</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
@@ -22,7 +22,7 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2023</Copyright>
-    <AssemblyVersion>15.0.0</AssemblyVersion>
+    <AssemblyVersion>16.0.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
     <FileVersion>15.0.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
@@ -30,7 +30,15 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>15.0.0
+    <PackageReleaseNotes>16.0.0
+* Almost complete support for UBL format
+* Sub invoice line support by @HenriSHS
+* UTF-8 Encoding without BOM
+* Dozens of bugfixes
+For details see:
+https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/16.0.0
+
+15.0.0
 ** General **
 This is the biggest release of the component since supporting multiple ZUGFeRD/ XRechnung versions. Big progress on UBL handling, enhanced validator conformance. Thanks to all who contributed.
 ZUGFeRD-csharp is largely based on spare-time work. 
