nuget setup for ZUGFeRD.PDF

--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -16,9 +16,19 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>	
     <RootNamespace>s2industries.ZUGFeRD.PDF</RootNamespace>	
-    <Version>15.0.0</Version>	
+    <Version>16.0.0-alpha</Version>	
     <PackageReleaseNotes>16.0.0: Initial version</PackageReleaseNotes>	
-    <AssemblyName>s2industries.ZUGFeRD.PDF</AssemblyName>
+    <AssemblyName>s2industries.ZUGFeRD.PDF</AssemblyName>	
+    <AssemblyVersion>16.0.0</AssemblyVersion>	
+    <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
+It is based on using PDF/A-3 to store invoices along with embedded xml descriptor for easy processing.
+A special favor is the so-called XRechnung which is also supported by this library.
+
+This library allows to load and create PDF/A files.
+</Description>	
+    <Copyright>Stephan Stapel, s2 industries, 2024</Copyright>	
+    <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>	
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,6 +43,7 @@
 
   <ItemGroup>
     <PackageReference Include="PDFsharp" Version="6.1.1" />
+    <PackageReference Include="ZUGFeRD-csharp" Version="16.0.0" />
   </ItemGroup>
 
   <ItemGroup>
