bugfixes and version dump

--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net480;net8.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
 	<Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
 	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -16,10 +16,11 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>	
     <RootNamespace>s2industries.ZUGFeRD.PDF</RootNamespace>	
-    <Version>16.0.0-alpha</Version>	
-    <PackageReleaseNotes>16.0.0: Initial version</PackageReleaseNotes>	
+    <Version>16.1.0</Version>	
+    <PackageReleaseNotes>16.1.0: first full working version
+16.0.0: Initial version</PackageReleaseNotes>	
     <AssemblyName>s2industries.ZUGFeRD.PDF</AssemblyName>	
-    <AssemblyVersion>16.0.0</AssemblyVersion>	
+    <AssemblyVersion>16.1.0</AssemblyVersion>	
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
 It is based on using PDF/A-3 to store invoices along with embedded xml descriptor for easy processing.
 A special favor is the so-called XRechnung which is also supported by this library.
@@ -28,7 +29,8 @@ This library allows to load and create PDF/A files.
 </Description>	
     <Copyright>Stephan Stapel, s2 industries, 2024</Copyright>	
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>	
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>	
+    <SignAssembly>True</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
@@ -43,11 +45,8 @@ This library allows to load and create PDF/A files.
 
   <ItemGroup>
     <PackageReference Include="PDFsharp-extended" Version="1.1.1" />
-    <PackageReference Include="ZUGFeRD-csharp" Version="16.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ZUGFeRD\ZUGFeRD.csproj" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.0" />
+    <PackageReference Include="ZUGFeRD-csharp" Version="16.0.3" />
   </ItemGroup>
 
 </Project>
