--- a/ZUGFeRD/ZUGFeRD.csproj
+++ b/ZUGFeRD/ZUGFeRD.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1;net461;net480;net8.0</TargetFrameworks>
-    <Version>16.0.3</Version>
+    <Version>16.1.0</Version>
     <Authors>Stephan Stapel</Authors>
     <Company>s2 industries</Company>
     <Description>ZUGFeRD and it's successor Factur-X/ XRechnung are initiatives from German (respectively European) government to foster electronic invoices.
@@ -22,15 +22,23 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
     <PackageProjectUrl>https://github.com/stephanstapel/ZUGFeRD-csharp/</PackageProjectUrl>
     <PackageTags>zugferd xml</PackageTags>
     <Copyright>Stephan Stapel, s2 industries, 2024</Copyright>
-    <AssemblyVersion>16.0.3</AssemblyVersion>
+    <AssemblyVersion>16.1.0</AssemblyVersion>
     <AssemblyTrademark>http://www.s2-industries.com</AssemblyTrademark>
-    <FileVersion>16.0.3</FileVersion>
+    <FileVersion>16.1.0</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <AssemblyName>s2industries.ZUGFeRD</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ZUGFeRD.snk</AssemblyOriginatorKeyFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PackageReleaseNotes>16.0.3
+    <PackageReleaseNotes>16.1.0
+* New codes
+* Bugfixes
+* Minor new features
+For details see:
+https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/16.1.0
+
+
+16.0.3
 * Bugfix for ApplicableTradeTax
 * Bugfix for Comments
 
@@ -44,23 +52,7 @@ https://github.com/stephanstapel/ZUGFeRD-csharp</Description>
 * UTF-8 Encoding without BOM
 * Dozens of bugfixes
 For details see:
-https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/16.0.0
-
-15.0.0
-** General **
-This is the biggest release of the component since supporting multiple ZUGFeRD/ XRechnung versions. Big progress on UBL handling, enhanced validator conformance. Thanks to all who contributed.
-ZUGFeRD-csharp is largely based on spare-time work. 
-Please sponsor the development of ZUGFeRD-csharp: https://github.com/sponsors/stephanstapel
-
-** Breaking Changes **
-* Support for ZUGFeRD 2.3, dropping ZUGFeRD 2.2
-* Better support for DesignatedProductClassification
-* Support for multiple invoice referenced documents
-* Parameter reordering of AdditionalReferencedDocuments
-* AllowanceChargeBasisAmount is optional
-
-Many more changes:
-https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/15.0.0</PackageReleaseNotes>
+https://github.com/stephanstapel/ZUGFeRD-csharp/releases/tag/16.0.0</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>ZUGFeRD-csharp</PackageId>
     <PackageReadmeFile>README.md</PackageReadmeFile>
