--- a/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
+++ b/ZUGFeRD.PDF/ZUGFeRD.PDF.csproj
@@ -45,7 +45,7 @@ This library allows to load and create PDF/A files.
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="PDFsharp-extended" Version="1.1.1" />
+    <PackageReference Include="PDFsharp-extended" Version="1.2.0-preview-1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="9.0.0" />
     <PackageReference Include="ZUGFeRD-csharp" Version="16.1.0" />
   </ItemGroup>
